--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -224,4 +224,10 @@ Mit \textbf{\texttt{\textbackslash href\{URL\}\{Text\}}} kann ein Link zu einer 
 In \autoref{tab:querverweise} wird dies anhand eines Beispiels demonstriert:
 \input{anlagen/tabellen/quellenverweise}
 
-Bei den Befehlen (Ausnahme \textbackslash eqref) kann ein \textbf{*} verwendet werden um den Hyperlink zu entfernen. Beispiel: \texttt{\textbackslash ref*\{sec:querverweise\}}
+Bei den Befehlen (Ausnahme \textbackslash eqref und \textbackslash href) kann ein \textbf{*} verwendet werden um den Hyperlink zu entfernen. Beispiel: \texttt{\textbackslash ref*\{sec:querverweise\}}
+
+\subsection{Einheiten mit \texttt{siunitx}}
+
+Das Paket \textbf{siunitx} ermöglicht die einfache und konsistente Darstellung von Einheiten. Es bietet eine Vielzahl von Optionen und Befehlen, um Einheiten in Text und Formeln korrekt darzustellen.
+
+\textbf{Hier geht es später weiter}
