--- a/kapitel/dokumentenelemente.tex
+++ b/kapitel/dokumentenelemente.tex
@@ -376,6 +376,7 @@ Die Einstellungen für die Darstellung des Quellcodes können in der Präambel d
     frame=single,                       % Rahmen um den Code
     numbers=left,                       % Zeilennummern links
     stepnumber=1,                       % Jede Zeile nummerieren
+    lineskip=0pt,                       % Zeilenabstand anpassen
     numberstyle=\footnotesize,          % Kleine Zeilennummern
     basicstyle=\ttfamily,               % Monospace-Schriftart
     keywordstyle=\color{blue},          % Keywords blau
