--- a/literatur.bib
+++ b/literatur.bib
@@ -1,5 +1,5 @@
 @book{buch1,
-  author    = {Max Beispiel},
+  author    = {Max Mustermann},
   title     = {Einführung in LaTeX},
   publisher = {Beispiel-Verlag},
   year      = {2020}
