--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -31,6 +31,7 @@ Es ist zu beachten, dass \textbf{\texttt{\textbackslash lowercase\{\}}} und \tex
 
 
 \subsubsection{Schriftfarbe}
+\label{sec:schriftfarbe}
 Die Schriftfarbe kann auf folgende drei Arten geändert werden:
 
 \begin{itemize}
