--- a/main.tex
+++ b/main.tex
@@ -115,4 +115,5 @@
 \nocite{*}                 % Alle Einträge aus literatur.bib anzeigen
 \label{sec:literaturverzeichnis}
 
+Die im Literaturverzeichnis aufgeführten Quellen sind reine Beispiele und entsprechen nicht der Realität.
 \end{document}
